quên seller-session+mấy lỗi lặt vặt